# workspacex

./: .cursorignore  .env_example  .gitignore  README.md  pyproject.toml
.cursor/rules/: envterminal.mdc
.github/: release.yml
data/workspaces/demo/: artifact_e4114394ca07a57fea465936b5c80d69e7754c75674521dd07cad9d8e77d3036.json  index.json  workspace_67b60981fd59b82e1c50826d15af5449fb6dcd53017aa7a2e31ade4df88a4b76.json
src/examples/: README.md  arxiv_example.py  bm25_example.py  image_examples.py  kg_example.py  noval_example.py  noval_example_s3_update_artifact_type.py  noval_extractor_examples.py  parallel_processing_example.py  simple_concurrency_test.py
src/examples/chunks/: chunk_test.py
src/examples/embeddings/: ollama_embedding_example.py  openai_example.py  vector_store_example.py
src/examples/extract/: langextract_demo.py  mcp_playwright.py  novel_entity_relation_extractor.py
src/examples/local/: novel_zhetian.py
src/workspacex/: __init__.py  artifact.py  base.py  code_artifact.py  config.py  noval_artifact.py  observer.py  workspace.py
src/workspacex/artifacts/: arxiv.py  base_pdf_processor.py  factory.py  form_definitions.py  langextract.py  novel_artifact.py  pdf.py  pdf_artifact.py  playwright.py  web_pages.py
src/workspacex/chunk/: base.py  character.py  markdown.py  sentence.py  smart.py
src/workspacex/embedding/: base.py  embeddings_base.py  ollama.py  openai_compatible.py
src/workspacex/extractor/: __init__.py  base.py  langextractor.py  noval_extractor.py
src/workspacex/fulltext/: __init__.py  factory.py
src/workspacex/fulltext/dbs/: __init__.py  base.py  elasticsearch.py
src/workspacex/handler/: summary.py
src/workspacex/reranker/: base.py  bm25.py  dashscope.py  factory.py  http.py  local.py
src/workspacex/reranker/server/: reranker_server.py
src/workspacex/storage/: artifact_repository.py  base.py  local.py  s3.py  s3_repository.py
src/workspacex/utils/: common.py  io.py  logger.py  pdf.py  progress.py  rag_utils.py  scheduler.py  timeit.py  tokenutils.py
src/workspacex/vector/: connector.py  factory.py
src/workspacex/vector/dbs/: base.py  chroma.py
src/workspacex_mcp/: rag_local_cli.py  rag_remote_cli.py
