[project]
name = "workspacex"
version = "0.1.29"
description = "workspacex is a Python library for managing AIGC (AI-Generated Content) artifacts. It provides a collaborative workspace environment for handling multiple artifacts with features like version control, update notifications, artifact management, and pluggable storage and embedding backends."
authors = [
    {name = "wuhulala",email = "xueaohui@gmail.com"}
]
readme = "README.md"
dependencies = [
    "pydantic (>=2.11.5,<3.0.0)",
    "mistune (>=3.1.3,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "aiohttp (>=3.12.13,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "openai (>=1.86.0,<2.0.0)",
    "s3fs (>=2025.5.1,<2026.0.0)",
    "dashscope (>=1.23.4,<2.0.0)",
    "chromadb (>=1.0.13,<2.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-text-splitters (>=0.3.8,<0.4.0)",
    "numpy (>=1.26.4,<2.0)",
	"langchain_core(>=0.3.66,<0.4.0)",
	"langfuse(>=3.1.3,<4.0.0)",
]
requires-python = ">=3.10,<=3.13"

[project.optional-dependencies]
reranker = [
    "torch>=2.2.0",
    "transformers>=4.51.0"
]
reranker-server = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "torch>=2.2.0",
    "transformers>=4.51.0"
]
chunker-sentence = [
    "sentence_transformers>=5.0.0"
]
mcp =[
    "fastmcp>=2.10.6"
]
all = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "torch>=2.2.0",
    "transformers>=4.51.0",
    "sentence_transformers>=5.0.0",
    "elasticsearch==8.17.2",
    "fastmcp>=2.10.6"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "workspacex", from = "src" },
    { include = "workspacex_mcp", from = "src" }
]

[tool.poetry.dependencies]
boto3 = "^1.18.0"
numpy = "<2"

[tool.poetry.extras]
reranker = ["torch", "transformers"]
reranker-server = ["torch", "transformers", "fastapi", "uvicorn"]